# HeatDiffusion2DGrille

./: .gitignore  CMakeLists.txt  README.md  check.sh  openmp_results.csv
include/: boundary.h  config.h  grid.h  solver.h  timer.h
resultats/: openmp_strongscaling_results.csv
results/: hybrid_strongscaling.csv  hybrid_weakscaling.csv  hybrid_weakscaling_2_cores.csv  mpi_strongscaling.csv
results/results/: hybrid_strongscaling.csv  mpi_strongscaling.csv  mpi_weakscaling.csv
scripts/: benchmark_openmp.py  benchmark_strongscaling_hybrid.py  benchmark_strongscaling_mpi.py  benchmark_strongscaling_openmp.py  benchmark_weakscaling_hybrid.py  benchmark_weakscaling_mpi.py  benchmark_weakscaling_openmp.py  plot_results.py  run_hybrid.slurm  run_mpi.slurm  run_openmp.sh  run_sequential.sh
src/: boundary.cpp  config.cpp  grid.cpp  main.cpp  solver.cpp  solver_hybrid.cpp  solver_mpi.cpp  solver_openmp.cpp  solver_sequential.cpp  timer.cpp
tests/: test_correctness.py  test_sequential.cpp
